--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "scripts": {
         "start": "vite",
         "dev": "vite",
-        "build": "vite build",
+        "build": "remix vite:build",
         "lint": "eslint .",
         "preview": "vite preview"
     },
     "dependencies": {
         "@emailjs/browser": "^4.4.1",
+        "@remix-run/node": "^2.15.0",
+        "@remix-run/react": "^2.15.0",
         "aos": "^2.3.4",
         "firebase": "^11.0.2",
         "normalize.css": "^8.0.1",
@@ -22,6 +24,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
+        "@remix-run/dev": "^2.15.0",
         "@types/react": "^18.3.10",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
@@ -30,6 +33,6 @@
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.12",
         "globals": "^15.9.0",
-        "vite": "^5.4.8"
+        "vite": "^5.4.11"
     }
 }
