--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "scripts": {
         "start": "vite",
         "dev": "vite",
-        "build": "remix vite:build",
+        "build": "vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "jest"
     },
     "dependencies": {
         "@emailjs/browser": "^4.4.1",
@@ -17,6 +18,7 @@
         "@remix-run/react": "^2.15.0",
         "aos": "^2.3.4",
         "firebase": "^11.0.2",
+        "netlify": "^13.1.21",
         "normalize.css": "^8.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -24,7 +26,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
-        "@remix-run/dev": "^2.15.0",
+        "@remix-run/dev": "^2.15.1",
         "@types/react": "^18.3.10",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
